# Teste-de-desempenho-de-GPU-CPU-com-OpenGL

./: CMakeLists.txt  EXTREME_TEST_README.md  GUIA_APRESENTACAO.md  INSTRUCOES_ENTREGA.md  README.md  RELATORIO_FINAL.md  RELATORIO_FINAL_COMPLETO.md  demo.sh  demo_final.sh  extreme_test.sh  resumo.md  setup.sh  test.sh
data/: advanced_performance_data.csv  performance_data.csv
reports/: summary_table.txt
scripts/: analyze_data.py  analyze_extreme_data.py
src/: AdvancedRenderer.cpp  AdvancedRenderer.h  Lighting.cpp  Lighting.h  MultiTriangleRenderer.cpp  MultiTriangleRenderer.h  PerformanceMonitor.cpp  PerformanceMonitor.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  advanced_test.cpp  demo_interativo.cpp  extreme_test.cpp  main.cpp  performance_test.cpp
